# summarization_cpu

./: .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  pyproject.toml
app/: main.py
app/model/: inference.py
tests/: conftest.py  test_main.py
